[gd_scene load_steps=9 format=1]

[ext_resource path="res://scenes/Game/Game.gd" type="Script" id=1]
[ext_resource path="res://scenes/Keyboard/Keyboard.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/GuessGrid/GuessGrid.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Fade/Fade.gd" type="Script" id=4]
[ext_resource path="res://scenes/ButtonPrompt/ButtonPrompt.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Toast/Toast.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/WordLoader/WordLoader.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/StatusModal/StatusModal.tscn" type="PackedScene" id=8]

[node name="Game" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Keyboard" parent="." instance=ExtResource( 2 )]

[node name="GuessGrid" parent="." instance=ExtResource( 3 )]

[node name="Prompts" type="Node2D" parent="."]

script/script = ExtResource( 4 )

[node name="SelectPrompt" parent="Prompts" instance=ExtResource( 5 )]

text = "Select"
icon_index = 1

[node name="DeletePrompt" parent="Prompts" instance=ExtResource( 5 )]

transform/pos = Vector2( 0, 56 )
text = "Delete"
icon_index = 2

[node name="SubmitPrompt" parent="Prompts" instance=ExtResource( 5 )]

transform/pos = Vector2( 0, 112 )
text = "Submit"
icon_index = 3

[node name="MenuPrompt" parent="Prompts" instance=ExtResource( 5 )]

transform/pos = Vector2( 0, 168 )
text = "Main Menu"

[node name="Toast" parent="." instance=ExtResource( 6 )]

[node name="WordLoader" parent="." instance=ExtResource( 7 )]

[node name="StatusModal" parent="." instance=ExtResource( 8 )]


